Fixes: Fix GitGuardian security issues
- Remove hardcoded mnemonics from Testnet.toml and Devnet.toml
- Clean up commented secret keys from Devnet.toml
- Add security-related entries to .gitignore
- Replace sensitive data with placeholder comments
- Prevent future accidental secret commits

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,17 @@ jspm_packages/
 .clarinet/
 .clarinet/
 
+# Security and secrets
+*.key
+*.pem
+*.p12
+*.pfx
+secrets/
+.secrets/
+mnemonic.txt
+wallet.json
+*.wallet
+
 # Temporary folders
 tmp/
 temp/
